@@ -12,6 +12,7 @@
 	(ebuild-mode-keywords-autotools): Add eaclocal_amflags() function
 	(ebuild-mode-keywords-multilib): Remove functions
 	get_libdir_override() and get_multilibdir()
+	(ebuild-mode-keywords-java-vm-2): Add java-vm-2.eclass
 
 2011-12-28  Christian Faulhammer  <fauli@gentoo.org>
 
